Sieve and pagination now works
