# server/service/Services/Interfaces/IUserService.cs
@@ -1,10 +1,11 @@
 using Contracts.UserDTOs;
+using Contracts;
 
 namespace service.Services.Interfaces;
 
 public interface IUserService : IService<UserDto>
 {
-    Task<IEnumerable<UserDto>> GetAllAsync(UserQueryParameters? parameters);
+    Task<PagedResult<UserDto>> GetAllAsync(UserQueryParameters? parameters);
     Task<UserDto> RegisterUserAsync(RegisterUserDto dto);
     Task<bool> VerifyUserPasswordAsync(string userId, string plainPassword);
 }
